--- a/scss/_bet-lists.scss
+++ b/scss/_bet-lists.scss
@@ -16,11 +16,13 @@ header.bet-heading{
     margin: 0;
     color: white;
     font-weight: 500;
+    text-align: left;
   }
   .bet-status{
     font-size: 12px;
     font-weight: 500;
     color: white;
+    text-align: right;
   }
 }
 .bet-item{
